templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mydiet
  name: mydiet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydiet
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mydiet
    spec:
      containers:
      - image: harbor.wbl.com/fitness/mydiet:BLDID230114-220923
        name: mydiet
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-seoul
        resources: {}
      volumes:
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
          type: ""
        name: tz-seoul
status: {}
---
