templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mydiet
  name: mydiet
spec:
  ports:
  - name: http-svc
    nodePort: 32672
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mydiet
  type: NodePort
status:
  loadBalancer: {}
---
